--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="header">
     <div class="links">extreme weather biomes</div>
-    <div class="title">Arch-wild current stuff</div>
+    <div class="title">Arch-wild current culture</div>
     <div class="links">regular weather biomes</div>
 </div>    
     <div class="mainBody">
@@ -17,7 +17,7 @@
             <div class="image"><img src="" alt="imagine picture"></div>
             <div class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias ab exercitationem modi fugiat, nemo provident excepturi dicta rem tempore, delectus voluptatem suscipit repellat maxime repellendus tempora, earum unde voluptatibus quas.</div>
         </div>
-        <hr class="rounded">
+        <div class="vl"></div>
         <div class="image_text2">
             <div class="image"><img src="" alt="imagine picture"></div>
             <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit nostrum facere tenetur doloremque placeat obcaecati voluptates eum, nemo quasi blanditiis recusandae reprehenderit voluptatem magni tempora optio deserunt ab consequatur iusto.</div>
