planned links are now link available

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <div class="header">
-    <div class="links">extreme weather biomes</div>
+    <a href="">extreme weather biomes</a>
     <div class="title">Arch-wild current culture</div>
-    <div class="links">regular weather biomes</div>
+    <a href="">regular weather biomes</a>
 </div>    
     <div class="mainBody">
         <div class="image_text1">
