titles and links

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arch-wild</title>
+    <title>Arch-wild culture</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="header">
-    <a href="">extreme weather biomes</a>
+    <a href="https://skadudel.github.io/DND_Extreme_Climate_Culture/">extreme weather biomes current culture</a>
     <div class="title">Arch-wild current culture</div>
-    <a href="">regular weather biomes</a>
+    <a href="https://skadudel.github.io/DND_Regular_weather_Culture/">regular weather biomes current culture</a>
 </div>    
     <div class="mainBody">
         <div class="image_text1">
