--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="mainBody">
         <div class="image_text1">
             <div class="image"><img src="" alt="imagine picture"></div>
-            <div class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias ab exercitationem modi fugiat, nemo provident excepturi dicta rem tempore, delectus voluptatem suscipit repellat maxime repellendus tempora, earum unde voluptatibus quas.</div>
+            <div class="text">In the regular world the Arch-wild is something only known in a few social circles like some historians, the royal family and high ranked people of the adventurers guild. Due to the special nature of the Arch-wild most people are valued highly in almost all lines of work due to them almost always having extraordinary abilities giving people from the Arch-wild far more ease in getting a job in social circles where they know about the Arch-wild. Even in the regular world there are tales of what happened in the Arch-wild so long ago, as warnings of great greed and tyrrants and the destruction that they can bring, but also of the great hero who showed strength while by standing up against the great evil. Though most of these stories are fairy tales or childrens stories, most don't know they come from real events that once took place.</div>
         </div>
         <div class="vl"></div>
         <div class="image_text2">
             <div class="image"><img src="" alt="imagine picture"></div>
-            <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit nostrum facere tenetur doloremque placeat obcaecati voluptates eum, nemo quasi blanditiis recusandae reprehenderit voluptatem magni tempora optio deserunt ab consequatur iusto.</div>
+            <div class="text">Even though most of the culture in the different regions are so different due to their climate and history, there are a few things that they all share. First of all, due to the strong magic that permeates the realm all the citizens become masters of their craft far more easily than others. This leads to them having far different views of what good quality is compared to most in the regular realm, though also far greater expectations of the young and what they will accomplish. Though what brings their culture together the most is the great hero and the great tyrant all those centuries ago with the constant reminder of the now frosty wasteland that has since been the Frosty Enclave. Though the true names of the great hero and the great tyrant have long since been forgotten, there have been many names they've been given instead.</div>
         </div>
     </div>
     
